--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "id": "dev-various-complements",
   "name": "Various Complements for Developer",
-  "version": "3.5.1.dev4",
-  "minAppVersion": "0.12.7",
+  "version": "4.0.0.beta1",
+  "minAppVersion": "0.13.11",
   "description": "This plugin enables you to complement input in markdown files",
   "author": "tadashi-aikawa",
   "authorUrl": "https://github.com/tadashi-aikawa",
